# lidar_excavation

./: .gitignore  README.md  demo_terrain.las  pyproject.toml
examples/: basic_analysis.py
src/lidar_excavation/: __init__.py  app.py  cli.py  web.py
src/lidar_excavation/analysis/: __init__.py  grading.py
src/lidar_excavation/core/: __init__.py  terrain.py  validation.py  volume.py
src/lidar_excavation/io/: __init__.py  exporters.py  point_cloud.py
src/lidar_excavation/utils/: __init__.py  visualization.py
tests/: __init__.py  conftest.py  test_basic.py  test_cli.py  test_las_files.py  test_validation.py
