[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-excavation"
version = "0.1.0"
description = "LIDAR point cloud analysis for excavation planning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "numpy>=1.21.0",
    "laspy>=2.0.0",
    "lazrs>=0.5.0",  # For LAZ compression support
    "scipy>=1.7.0",
    "shapely>=2.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.62.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
]
full = [
    "open3d>=0.15.0",
    "pdal>=3.0.0",
    "rasterio>=1.3.0",
]

[project.scripts]
lidar-excavation = "lidar_excavation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
